--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -8,6 +8,7 @@ output: github_document
 ####  Vanessa Dinh (vd2407), Rahul Hosalli (rh3064), Armaan Sodhi (as6447), Mindy Tran (mnt2130)
 
 ## Motivation
+The motivation for this project is that climate change exists
 
 ## Intended Final Products
 
