--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -5,15 +5,32 @@ output: github_document
 
 # Outgassing, Air Quality, Birth Weight and Asthma in Pennsylvania (1980-2020)
 
-####  Vanessa Dinh (vd2407), Rahul Hosalli (rh3064), Armaan Sodhi (as6447), Mindy Tran (mnt2130)
+#### Vanessa Dinh (vd2407), Rahul Hosalli (rh3064), Armaan Sodhi (as6447), Mindy Tran (mnt2130)
 
 ## Motivation
+
 The motivation for this project is that climate change exists
 
 ## Intended Final Products
 
+Flex dashboard with interactive plots
+
+Heatmaps
+
+General descriptive statistics
+
 ## Anticipated Data Sources
 
+EPA
+
+Census
+
+EIA - US reserve
+
 ## Planned Analyses/Visualizations/Coding Challenges
+
+Descriptive statistics, interactive dashboard with maps
+
+Challenges: geo-spatial visualization, cleaning and merging three datasets
 
 ## Planned Timeline
