--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -34,3 +34,11 @@ Descriptive statistics, interactive dashboard with maps
 Challenges: geo-spatial visualization, cleaning and merging three datasets
 
 ## Planned Timeline
+
+Nov 22rd: Data cleaned, introduction, data sources, motivation.
+
+Dec 2nd: All visualizations and near final website completed.
+
+Dec 7th: Screencast completed after finalizing website.
+
+Dec 10th: Complete Project submission with all report and webpage.
