--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -8,7 +8,7 @@ output: github_document
 ####  Vanessa Dinh (vd2407), Rahul Hosalli (rh3064), Armaan Sodhi (as6447), Mindy Tran (mnt2130)
 
 ## Motivation
-The motivation for this project is that climate change exists
+The motivation for this project is to evaluate the effects of outgassing on the local populations. Outgassing is the release of a gas that was dissolved, trapped, frozen, or absorbed in some material, potentially resulting in worsened air quality in the environment. The current literature has reported that outgassing has had negative health effects on the general population. In particular there is a focus on the effect of outgassings effect on potentially causing asthma and birthweight. There was particular interest made for the US State of Pennsylvania as it is a major producer of oil and thus Outgassing.
 
 ## Intended Final Products
 
