--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -21,11 +21,8 @@ General descriptive statistics
 
 ## Anticipated Data Sources
 
-EPA
+We plan on using three data sources, which are the US Energy Information Administration, the US Environmental Protection Agency, and the US Census. All data will be limited geographically to the county-level in Pennsylvania and for years 1980-2020, by decade. The US Energy Information Administration (EIA) has data on CO2 emissions that we will use as the exposure for the health outcomes we are observing, birthweight and asthma. The US Environmental Protection Agency has data on air quality, which would theoretically be a mediator for the association between CO2 emissions and the health outcomes of low birthweight and asthma. Lastly, we will use US Census data to get the rates of low birthweight babies and asthma by county-level in Pennsylvania.
 
-Census
-
-EIA - US reserve
 
 ## Planned Analyses/Visualizations/Coding Challenges
 
