--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -12,12 +12,13 @@ output: github_document
 The motivation for this project is to evaluate the effects of outgassing on the local populations. Outgassing is the release of a gas that was dissolved, trapped, frozen, or absorbed in some material, potentially resulting in worsened air quality in the environment. The current literature has reported that outgassing has had negative health effects on the general population. In particular there is a focus on the effect of outgassings effect on potentially causing asthma and birthweight. There was particular interest made for the US State of Pennsylvania as it is a major producer of oil and thus Outgassing.
 
 ## Intended Final Products
+We plan on creating a website with:
 
-Flex dashboard with interactive plots
+Page detailing statistical analyses conducted
+Interactive flex dashboard page showing trends over time 
+Interactive map showing the locations of oil reserves in Pennsylvania
+Project Report
 
-Heatmaps
-
-General descriptive statistics
 
 ## Anticipated Data Sources
 
