--- a/Exploratory_Analysis.Rmd
+++ b/Exploratory_Analysis.Rmd
@@ -11,6 +11,7 @@ library(ggplot2)
 library(readr)
 library(patchwork)
 library(plotly)
+library(lubridate)
 
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -28,7 +29,7 @@ scale_fill_discrete = scale_fill_viridis_d
 superfund_sites =
   read_csv("./data/superfund_NPL_sites.csv") %>% 
   janitor::clean_names() %>% 
-  select(-region_id, -state, -construction_completion_number, -site_listing_narrative, -site_progress_profile, -ends_with("notice"), -restoration_fr_notice_jumper_page, -noid_date, -deletion_date) %>% 
+  select(-region_id,-construction_completion_number, -site_listing_narrative, -site_progress_profile, -ends_with("notice"), -restoration_fr_notice_jumper_page, -noid_date, -deletion_date) %>% 
   filter(status == "NPL Site")
 
 superfund_by_county =
@@ -47,9 +48,93 @@ aes(x = reorder(county, -n_superfund), y = n_superfund, color = county, fill = c
     legend.position = "none") +
    labs(
     x = " ",
-    y = "Number of Superfundsites"
+    y = "Number of Superfund Sites"
   ) +
   ggtitle("Pennsylvania: Number of Superfund Sites per County")
-   
+
 ```
-  
+
+```{r plot 2 , message=FALSE, warning=FALSE}
+health_outcomes = 
+  read_csv("./data/PLACES_County_2022.csv") %>% 
+  janitor::clean_names() %>% 
+  rename(county = county_name, state = state_abbr) %>% 
+  mutate(
+    county = as.factor(county)
+  ) %>% 
+  select(state, county, casthma_crude_prev,cancer_crude_prev, ) %>% 
+  filter(state == "PA")
+
+ggplot(health_outcomes,
+aes(x = reorder(county,+casthma_crude_prev), y = casthma_crude_prev, color = county, fill = county)) + 
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  theme(
+    legend.position = "none") +
+   labs(
+    x = " ",
+    y = "Crude Asthma Prevalence"
+  ) +
+  ggtitle("Prevalence of Asthma Among Adults 18+ by County 2020")
+
+top_asthma_outcomes = 
+  read_csv("./data/PLACES_County_2022.csv") %>% 
+  janitor::clean_names() %>% 
+  rename(county = county_name, state = state_abbr) %>% 
+  mutate(
+    county = as.factor(county)
+  ) %>% 
+  select(state, county, casthma_crude_prev, ) %>% 
+  filter(state == "PA", casthma_crude_prev >= 10.4) 
+
+ggplot(top_asthma_outcomes,
+aes(x = reorder(county,+casthma_crude_prev), y = casthma_crude_prev, color = county, fill = county)) + 
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  theme(
+    legend.position = "none") +
+   labs(
+    x = " ",
+    y = "Crude Asthma Prevalence"
+  ) +
+  ggtitle("Top 10 Counties With Highest Asthma Prevalence in PA ")
+
+
+ggplot(health_outcomes,
+aes(x = reorder(county,+cancer_crude_prev), y = cancer_crude_prev, color = county, fill = county)) + 
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  theme(
+    legend.position = "none") +
+   labs(
+    x = " ",
+    y = "Crude Cancer Prevalence"
+  ) +
+  ggtitle("Prevalence of Cancer Among Adults 18+ by County 2020")
+
+top_cancer_outcomes = 
+  read_csv("./data/PLACES_County_2022.csv") %>% 
+  janitor::clean_names() %>% 
+  rename(county = county_name, state = state_abbr) %>% 
+  mutate(
+    county = as.factor(county)
+  ) %>% 
+  select(state, county, cancer_crude_prev, ) %>% 
+  filter(state == "PA", cancer_crude_prev >= 8.5) 
+
+ggplot(top_cancer_outcomes,
+aes(x = reorder(county,+cancer_crude_prev), y = cancer_crude_prev, color = county, fill = county)) + 
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  theme(
+    legend.position = "none") +
+   labs(
+    x = " ",
+    y = "Crude Cancer Prevalence"
+  ) +
+  ggtitle("Top 11 Counties with Highest Prevalence of Cancer in PA")
+
+```
+
+
+
